@@ -1,6 +1,7 @@
 etc/syslog-ng/*
 usr/bin/*
 usr/sbin/*
+usr/lib/syslog-ng/libsyslog-ng-*.so
 usr/lib/syslog-ng/*/libsyslog-ng-crypto.so
 usr/lib/syslog-ng/*/libaffile.so
 usr/lib/syslog-ng/*/libafprog.so
